# awesome-agentic-games

./: .gitignore  .gitmodules  LOAD GAME.md  README.md  compile.md  game_template.md  tui_template.md  tui_template.py
.claude/: settings.local.json
Examples/Rise of Empires/: LOAD GAME.md  NEW GAME.md  SAVE GAME.md
Examples/Rise of Empires/agent/: game.md  player.md  system.md
Examples/Rise of Empires/game/: background.md  init.md  npcs.md  sessions.md
Examples/Rise of Empires/settings/: custom.json
Examples/Rise of Empires/tools/: dice.py
Examples/Signal Lost/: LOAD GAME.md  README.md  RESUME.md  SAVE GAME.md  game_playthrough_log.md  pyproject.toml
Examples/Signal Lost/agent/: game.md  system.md
Examples/Signal Lost/compiled/: graph.py  prompts.py  reducer.py  run.py  state.py  tools.py
Examples/Signal Lost/compiled/tui/: screens.py  tui_viewer.py
Examples/Signal Lost/game/: init.md  npcs.md  sessions.md
Examples/Signal Lost/logs/: playthrough.md
Examples/Signal Lost/settings/: custom.json  provider.json
Examples/Signal Lost/tui/: tui_viewer.py
Examples/The Sundering of Aethermoor/: LOAD GAME.md  NEW GAME.md  README.md  RESUME.md  SAVE GAME.md  main.py  pyproject.toml
Examples/The Sundering of Aethermoor/.claude/: settings.local.json
Examples/The Sundering of Aethermoor/agent/: game.md  player.md  system.md
Examples/The Sundering of Aethermoor/game/: background.md  init.md  npcs.md  sessions.md
Examples/The Sundering of Aethermoor/session/: location.md  player.md
agent/: game.md  system.md
game/: init.md
settings/: custom.json
(+18 files in other folders)
