[project]
name = "signal-lost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.2.22",
    "pyte>=0.8.2",
    "rich>=14.3.3",
    "textual>=8.1.1",
]

[tool.uv.workspace]
members = [
    "compiled",
]
